# hypofin

./: README.md  app.py  deploy.sh  get-lambda-logs.sh  pyproject.toml  scratch.py
.chalice/: config.json
.chalice/deployed/: dev.json
backend/: .gitignore
backend/hypofin/: __init__.py  scenario.py  schemas.py  server.py  trajectory.py
backend/hypofin/data/: global_cape_ratio.py
backend/test/: test_data.py  test_scenario.py  test_trajectory.py
chalicelib/: __init__.py  config.py  country.py  data.py  expectations.py  portfolio.py  predictions.py  return_source.py  tax_system.py  trajectory.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.js  App.tsx  DeliberationPage.tsx  FractionSlider.tsx  LandingPage.tsx  MoneyInput.js  MoneyInput.tsx  Plots.tsx  ResultsPage.tsx  SituationPage.js  SituationPage.tsx  formatMoney.ts  numericFormatProps.ts
hypofin/: __init__.py  country.py  data.py  expectations.py  portfolio.py  predictions.py  return_conversion.py  return_source.py  return_utils.py  scenario.py  schemas.py  server.py  simulator.py  tax_system.py  trajectory.py  user.py
hypofin/data/: __init__.py  bond_yield.py  cache.py  global_cape_ratio.py  historical_values.py
test/: test_app.py  test_data.py  test_predictions.py  test_scenario.py  test_server.py  test_tax_system.py  test_trajectory.py  test_user.py
test-api/: get-lambda-logs.sh  run-lambda.sh  test-api.sh
