[tool.poetry]
name = "hypofin"
version = "0.1.0"
description = "A financial planning API designed to let users hypothesize future scenarios."
authors = ["malyvsen"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.4.0"
numpy = "^1.22.1"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
