[tool.poetry]
name = "hypofin"
version = "0.1.0"
description = "A financial planning API designed to let users hypothesize future scenarios."
authors = ["malyvsen"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.4.0"
lxml = "^4.7.1"
cachetools = "^5.0.0"
yfinance = "^0.1.70"
beautifulsoup4 = "^4.10.0"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
chalice = "^1.26.6"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
