[tool.poetry]
name = "hypofin"
version = "0.1.0"
description = "A financial planning API designed to let users hypothesize future scenarios."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
yfinance = "^0.2.26"
cachetools = "^5.3.1"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"
ipykernel = "^6.25.0"
plotly = "^5.15.0"
nbformat = "^5.9.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
